--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "declaration": false,
     "outDir": "./dist",
     "rootDir": "./src",
-    "typeRoots": ["./node_modules/@types"]
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["node"]
   },
   "include": [
     "src/**/*"
